@@ -1,0 +1,43 @@
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN""http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en" lang="en">
+<head>
+<meta http-equiv="content-type" content="text/html; charset=utf-8" />
+<title>MediaInfo(Lib) License</title>
+</head>
+
+<body>
+<div">
+<h3 style="text-align: center;">MediaInfo(Lib) License</h3>
+<p style="text-align: center;">Version 1, 27 August 2009</p>
+
+<p>Copyright 2002-2009 MediaArea.net. All rights reserved.</p>
+
+<p>Redistribution and use in source and binary forms, <b>without</b> modification, are
+permitted provided that the following conditions are met:</p>
+
+<ol>
+<li>Redistributions of source code must retain the above copyright notice, this list of
+conditions and the following disclaimer.</li>
+
+<li>Redistributions in binary form must reproduce the above copyright notice, this list
+of conditions and the following disclaimer in the documentation and/or other materials
+provided with the distribution.</li>
+</ol>
+
+<p>THIS SOFTWARE IS PROVIDED BY MEDIAAREA.NET ``AS IS'' AND ANY EXPRESS OR IMPLIED
+WARRANTIES, INCLUDING, BUT NOT LIMITED TO, THE IMPLIED WARRANTIES OF MERCHANTABILITY AND
+FITNESS FOR A PARTICULAR PURPOSE ARE DISCLAIMED. IN NO EVENT SHALL MEDIAAREA.NET OR
+CONTRIBUTORS BE LIABLE FOR ANY DIRECT, INDIRECT, INCIDENTAL, SPECIAL, EXEMPLARY, OR
+CONSEQUENTIAL DAMAGES (INCLUDING, BUT NOT LIMITED TO, PROCUREMENT OF SUBSTITUTE GOODS OR
+SERVICES; LOSS OF USE, DATA, OR PROFITS; OR BUSINESS INTERRUPTION) HOWEVER CAUSED AND ON
+ANY THEORY OF LIABILITY, WHETHER IN CONTRACT, STRICT LIABILITY, OR TORT (INCLUDING
+NEGLIGENCE OR OTHERWISE) ARISING IN ANY WAY OUT OF THE USE OF THIS SOFTWARE, EVEN IF
+ADVISED OF THE POSSIBILITY OF SUCH DAMAGE.</p>
+
+<h3 style="text-align: center;">Note for people wanting to modifiate</h3>
+<p style="text-align: center;">Redistribution and use in source and binary forms, <b>with</b> modification, are
+permitted provided that the <a href="License.html">LGPLv3</a> is met.<br />
+Dynamic or static linking to this software are not deemed a modification.</p>
+</div>
+</body>
+</html>
